marking status of plone projects as REVIEW NEEDED

--- a/etc/plone-projects.cfg
+++ b/etc/plone-projects.cfg
@@ -294,460 +294,453 @@ rules = %(here)s/plone-rules/coredev.cfg
 svn-repo = plone
 svn-path = /buildouts/plone-coredev
 git-url = git@github.com:plone/coredev.git
-status = NEEDS RULES
-
-[repo:Plone]
-rules = %(here)s/plone-rules/Plone.cfg
-svn-repo = plone
-svn-path = /Plone
-git-url = git@github.com:plone/Plone.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.blob]
 rules = %(here)s/plone-rules/plone.app.blob.cfg
 svn-repo = plone
 svn-path = /plone.app.blob
 git-url = git@github.com:plone/plone.app.blob.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.caching]
 rules = %(here)s/plone-rules/plone.app.caching.cfg
 svn-repo = plone
 svn-path = /plone.app.caching
 git-url = git@github.com:plone/plone.app.caching.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.collection]
 rules = %(here)s/plone-rules/plone.app.collection.cfg
 svn-repo = plone
 svn-path = /plone.app.collection
 git-url = git@github.com:plone/plone.app.collection.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.content]
 rules = %(here)s/plone-rules/plone.app.content.cfg
 svn-repo = plone
 svn-path = /plone.app.content
 git-url = git@github.com:plone/plone.app.content.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.contentmenu]
 rules = %(here)s/plone-rules/plone.app.contentmenu.cfg
 svn-repo = plone
 svn-path = /plone.app.contentmenu
 git-url = git@github.com:plone/plone.app.contentmenu.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.contentrules]
 rules = %(here)s/plone-rules/plone.app.contentrules.cfg
 svn-repo = plone
 svn-path = /plone.app.contentrules
 git-url = git@github.com:plone/plone.app.contentrules.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.controlpanel]
 rules = %(here)s/plone-rules/plone.app.controlpanel.cfg
 svn-repo = plone
 svn-path = /plone.app.controlpanel
 git-url = git@github.com:plone/plone.app.controlpanel.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.customerize]
 rules = %(here)s/plone-rules/plone.app.customerize.cfg
 svn-repo = plone
 svn-path = /plone.app.customerize
 git-url = git@github.com:plone/plone.app.customerize.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.discussion]
 rules = %(here)s/plone-rules/plone.app.discussion.cfg
 svn-repo = plone
 svn-path = /plone.app.discussion
 git-url = git@github.com:plone/plone.app.discussion.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.folder]
 rules = %(here)s/plone-rules/plone.app.folder.cfg
 svn-repo = plone
 svn-path = /plone.app.folder
 git-url = git@github.com:plone/plone.app.folder.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.form]
 rules = %(here)s/plone-rules/plone.app.form.cfg
 svn-repo = plone
 svn-path = /plone.app.form
 git-url = git@github.com:plone/plone.app.form.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.i18n]
 rules = %(here)s/plone-rules/plone.app.i18n.cfg
 svn-repo = plone
 svn-path = /plone.app.i18n
 git-url = git@github.com:plone/plone.app.i18n.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.imaging]
 rules = %(here)s/plone-rules/plone.app.imaging.cfg
 svn-repo = plone
 svn-path = /plone.app.imaging
 git-url = git@github.com:plone/plone.app.imaging.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.iterate]
 rules = %(here)s/plone-rules/plone.app.iterate.cfg
 svn-repo = plone
 svn-path = /plone.app.iterate
 git-url = git@github.com:plone/plone.app.iterate.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.jquerytools]
 rules = %(here)s/plone-rules/plone.app.jquerytools.cfg
 svn-repo = plone
 svn-path = /plone.app.jquerytools
 git-url = git@github.com:plone/plone.app.jquerytools.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.kss]
 rules = %(here)s/plone-rules/plone.app.kss.cfg
 svn-repo = plone
 svn-path = /plone.app.kss
 git-url = git@github.com:plone/plone.app.kss.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.layout]
 rules = %(here)s/plone-rules/plone.app.layout.cfg
 svn-repo = plone
 svn-path = /plone.app.layout
 git-url = git@github.com:plone/plone.app.layout.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.linkintegrity]
 rules = %(here)s/plone-rules/plone.app.linkintegrity.cfg
 svn-repo = plone
 svn-path = /plone.app.linkintegrity
 git-url = git@github.com:plone/plone.app.linkintegrity.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.openid]
 rules = %(here)s/plone-rules/plone.app.openid.cfg
 svn-repo = plone
 svn-path = /plone.app.openid
 git-url = git@github.com:plone/plone.app.openid.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.portlets]
 rules = %(here)s/plone-rules/plone.app.portlets.cfg
 svn-repo = plone
 svn-path = /plone.app.portlets
 git-url = git@github.com:plone/plone.app.portlets.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.redirector]
 rules = %(here)s/plone-rules/plone.app.redirector.cfg
 svn-repo = plone
 svn-path = /plone.app.redirector
 git-url = git@github.com:plone/plone.app.redirector.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.registry]
 rules = %(here)s/plone-rules/plone.app.registry.cfg
 svn-repo = plone
 svn-path = /plone.app.registry
 git-url = git@github.com:plone/plone.app.registry.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.search]
 rules = %(here)s/plone-rules/plone.app.search.cfg
 svn-repo = plone
 svn-path = /plone.app.search
 git-url = git@github.com:plone/plone.app.search.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.testing]
 rules = %(here)s/plone-rules/plone.app.testing.cfg
 svn-repo = plone
 svn-path = /plone.app.testing
 git-url = git@github.com:plone/plone.app.testing.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.upgrade]
 rules = %(here)s/plone-rules/plone.app.upgrade.cfg
 svn-repo = plone
 svn-path = /plone.app.upgrade
 git-url = git@github.com:plone/plone.app.upgrade.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.users]
 rules = %(here)s/plone-rules/plone.app.users.cfg
 svn-repo = plone
 svn-path = /plone.app.users
 git-url = git@github.com:plone/plone.app.users.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.uuid]
 rules = %(here)s/plone-rules/plone.app.uuid.cfg
 svn-repo = plone
 svn-path = /plone.app.uuid
 git-url = git@github.com:plone/plone.app.uuid.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.viewletmanager]
 rules = %(here)s/plone-rules/plone.app.viewletmanager.cfg
 svn-repo = plone
 svn-path = /plone.app.viewletmanager
 git-url = git@github.com:plone/plone.app.viewletmanager.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.vocabularies]
 rules = %(here)s/plone-rules/plone.app.vocabularies.cfg
 svn-repo = plone
 svn-path = /plone.app.vocabularies
 git-url = git@github.com:plone/plone.app.vocabularies.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.workflow]
 rules = %(here)s/plone-rules/plone.app.workflow.cfg
 svn-repo = plone
 svn-path = /plone.app.workflow
 git-url = git@github.com:plone/plone.app.workflow.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.app.z3cform]
 rules = %(here)s/plone-rules/plone.app.z3cform.cfg
 svn-repo = plone
 svn-path = /plone.app.z3cform
 git-url = git@github.com:plone/plone.app.z3cform.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.autoform]
 rules = %(here)s/plone-rules/plone.autoform.cfg
 svn-repo = plone
 svn-path = /plone.autoform
 git-url = git@github.com:plone/plone.autoform.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.browserlayer]
 rules = %(here)s/plone-rules/plone.browserlayer.cfg
 svn-repo = plone
 svn-path = /plone.browserlayer
 git-url = git@github.com:plone/plone.browserlayer.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.cachepurging]
 rules = %(here)s/plone-rules/plone.cachepurging.cfg
 svn-repo = plone
 svn-path = /plone.cachepurging
 git-url = git@github.com:plone/plone.cachepurging.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.caching]
 rules = %(here)s/plone-rules/plone.caching.cfg
 svn-repo = plone
 svn-path = /plone.caching
 git-url = git@github.com:plone/plone.caching.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.contentrules]
 rules = %(here)s/plone-rules/plone.contentrules.cfg
 svn-repo = plone
 svn-path = /plone.contentrules
 git-url = git@github.com:plone/plone.contentrules.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.fieldsets]
 rules = %(here)s/plone-rules/plone.fieldsets.cfg
 svn-repo = plone
 svn-path = /plone.fieldsets
 git-url = git@github.com:plone/plone.fieldsets.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.folder]
 rules = %(here)s/plone-rules/plone.folder.cfg
 svn-repo = plone
 svn-path = /plone.folder
 git-url = git@github.com:plone/plone.folder.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.i18n]
 rules = %(here)s/plone-rules/plone.i18n.cfg
 svn-repo = plone
 svn-path = /plone.i18n
 git-url = git@github.com:plone/plone.i18n.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.indexer]
 rules = %(here)s/plone-rules/plone.indexer.cfg
 svn-repo = plone
 svn-path = /plone.indexer
 git-url = git@github.com:plone/plone.indexer.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.intelligenttext]
 rules = %(here)s/plone-rules/plone.intelligenttext.cfg
 svn-repo = plone
 svn-path = /plone.intelligenttext
 git-url = git@github.com:plone/plone.intelligenttext.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.keyring]
 rules = %(here)s/plone-rules/plone.keyring.cfg
 svn-repo = plone
 svn-path = /plone.keyring
 git-url = git@github.com:plone/plone.keyring.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.locking]
 rules = %(here)s/plone-rules/plone.locking.cfg
 svn-repo = plone
 svn-path = /plone.locking
 git-url = git@github.com:plone/plone.locking.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.memoize]
 rules = %(here)s/plone-rules/plone.memoize.cfg
 svn-repo = plone
 svn-path = /plone.memoize
 git-url = git@github.com:plone/plone.memoize.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.openid]
 rules = %(here)s/plone-rules/plone.openid.cfg
 svn-repo = plone
 svn-path = /plone.openid
 git-url = git@github.com:plone/plone.openid.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.outputfilters]
 rules = %(here)s/plone-rules/plone.outputfilters.cfg
 svn-repo = plone
 svn-path = /plone.outputfilters
 git-url = git@github.com:plone/plone.outputfilters.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.portlet.collection]
 rules = %(here)s/plone-rules/plone.portlet.collection.cfg
 svn-repo = plone
 svn-path = /plone.portlet.collection
 git-url = git@github.com:plone/plone.portlet.collection.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.portlet.static]
 rules = %(here)s/plone-rules/plone.portlet.static.cfg
 svn-repo = plone
 svn-path = /plone.portlet.static
 git-url = git@github.com:plone/plone.portlet.static.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.portlets]
 rules = %(here)s/plone-rules/plone.portlets.cfg
 svn-repo = plone
 svn-path = /plone.portlets
 git-url = git@github.com:plone/plone.portlets.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.protect]
 rules = %(here)s/plone-rules/plone.protect.cfg
 svn-repo = plone
 svn-path = /plone.protect
 git-url = git@github.com:plone/plone.protect.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.registry]
 rules = %(here)s/plone-rules/plone.registry.cfg
 svn-repo = plone
 svn-path = /plone.registry
 git-url = git@github.com:plone/plone.registry.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.scale]
 rules = %(here)s/plone-rules/plone.scale.cfg
 svn-repo = plone
 svn-path = /plone.scale
 git-url = git@github.com:plone/plone.scale.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.session]
 rules = %(here)s/plone-rules/plone.session.cfg
 svn-repo = plone
 svn-path = /plone.session
 git-url = git@github.com:plone/plone.session.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.stringinterp]
 rules = %(here)s/plone-rules/plone.stringinterp.cfg
 svn-repo = plone
 svn-path = /plone.stringinterp
 git-url = git@github.com:plone/plone.stringinterp.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.supermodel]
 rules = %(here)s/plone-rules/plone.supermodel.cfg
 svn-repo = plone
 svn-path = /plone.supermodel
 git-url = git@github.com:plone/plone.supermodel.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.testing]
 rules = %(here)s/plone-rules/plone.testing.cfg
 svn-repo = plone
 svn-path = /plone.testing
 git-url = git@github.com:plone/plone.testing.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.theme]
 rules = %(here)s/plone-rules/plone.theme.cfg
 svn-repo = plone
 svn-path = /plone.theme
 git-url = git@github.com:plone/plone.theme.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.uuid]
 rules = %(here)s/plone-rules/plone.uuid.cfg
 svn-repo = plone
 svn-path = /plone.uuid
 git-url = git@github.com:plone/plone.uuid.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plonetheme.classic]
 rules = %(here)s/plone-rules/plonetheme.classic.cfg
 svn-repo = plone
 svn-path = /plonetheme.classic
 git-url = git@github.com:plone/plonetheme.classic.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plonetheme.sunburst]
 rules = %(here)s/plone-rules/plonetheme.sunburst.cfg
 svn-repo = collective
 svn-path = /plonetheme.sunburst
 git-url = git@github.com:plone/plonetheme.sunburst.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.CMFPlone]
 rules = %(here)s/plone-rules/Products.CMFPlone.cfg
 svn-repo = collective
 svn-path = /Products.CMFPlone
 git-url = git@github.com:plone/Products.CMFPlone.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.ExtendedPathIndex]
 rules = %(here)s/plone-rules/Products.ExtendedPathIndex.cfg
 svn-repo = collective
 svn-path = /Products.ExtendedPathIndex
 git-url = git@github.com:plone/Products.ExtendedPathIndex.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.LinguaPlone]
 rules = %(here)s/plone-rules/Products.LinguaPlone.cfg
 svn-repo = collective
 svn-path = /Products.LinguaPlone
 git-url = git@github.com:plone/Products.LinguaPlone.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.ResourceRegistries]
 rules = %(here)s/plone-rules/Products.ResourceRegistries.cfg
 svn-repo = collective
 svn-path = /ResourceRegistries
 git-url = git@github.com:plone/Products.ResourceRegistries.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
