--- a/etc/plone-rules/Products.CMFPlone.cfg
+++ b/etc/plone-rules/Products.CMFPlone.cfg
@@ -2,20 +2,45 @@
 create repository Products.CMFPlone
 end repository
 
-match /Products.CMFPlone/trunk/
+
+match /CMFPlone/branches/plips/plip-144-next-pre-nav/
+  min revision 11172
+  max revision 11173
+end match
+
+match /CMFPlone/branches/historical/([^/]+)/
+end match
+
+match /CMFPlone/branches/plips/([^/]+)/
+end match
+
+
+match /CMFPlone|Plone3rdParty|Products.CMFPlone)/trunk/
   repository Products.CMFPlone
   branch master
 end match
 
-match /Products.CMFPlone/branches/([^/]+)/
-  repository Products.CMFPlone
-  branch \1
+
+match /CMFPlone/kss-uid-aware/
+    repository Products.CMFPlone
+    branch kss-uid-aware
 end match
 
-match /Products.CMFPlone/tags/([^/]+)/
+match /CMFPlone/2.1-cmf1.5/
   repository Products.CMFPlone
-  branch refs/tags/\1
+  branch 2.1-cmf1.5
 end match
+
+match /(CMFPlone|Plone3rdParty|Products.CMFPlone)/branches/([^/]+)/
+  repository Products.CMFPlone
+  branch \2
+end match
+
+match /(CMFPlone|Products.CMFPlone)/tags/([^/]+)/
+  repository Products.CMFPlone
+  branch refs/tags/\2
+end match
+
 
 match /
 end match
