--- a/etc/plone-rules/Products.ExtendedPathIndex.cfg
+++ b/etc/plone-rules/Products.ExtendedPathIndex.cfg
@@ -2,20 +2,22 @@
 create repository Products.ExtendedPathIndex
 end repository
 
-match /Products.ExtendedPathIndex/trunk/
+
+match /(ExtendedPathIndex|Products.ExtendedPathIndex)/trunk/
   repository Products.ExtendedPathIndex
   branch master
 end match
 
-match /Products.ExtendedPathIndex/branches/([^/]+)/
+match /(ExtendedPathIndex|Products.ExtendedPathIndex)/branches/([^/]+)/
   repository Products.ExtendedPathIndex
-  branch \1
+  branch \2
 end match
 
-match /Products.ExtendedPathIndex/tags/([^/]+)/
+match /(ExtendedPathIndex|Products.ExtendedPathIndex)/tags/([^/]+)/
   repository Products.ExtendedPathIndex
-  branch refs/tags/\1
+  branch refs/tags/\2
 end match
+
 
 match /
 end match
