--- a/etc/plone-rules/Products.LinguaPlone.cfg
+++ b/etc/plone-rules/Products.LinguaPlone.cfg
@@ -2,19 +2,19 @@
 create repository Products.LinguaPlone
 end repository
 
-match /Products.LinguaPlone/trunk/
+match /(LinguaPlone|Products.LinguaPlone)/(trunk|trunk2)/
   repository Products.LinguaPlone
   branch master
 end match
 
-match /Products.LinguaPlone/branches/([^/]+)/
+match /(LinguaPlone|Products.LinguaPlone)/branches/([^/]+)/
   repository Products.LinguaPlone
-  branch \1
+  branch \2
 end match
 
-match /Products.LinguaPlone/tags/([^/]+)/
+match /(LinguaPlone|Products.LinguaPlone)/tags/([^/]+)/
   repository Products.LinguaPlone
-  branch refs/tags/\1
+  branch refs/tags/\2
 end match
 
 match /
