--- a/etc/plone-rules/Products.ResourceRegistries.cfg
+++ b/etc/plone-rules/Products.ResourceRegistries.cfg
@@ -2,19 +2,19 @@
 create repository Products.ResourceRegistries
 end repository
 
-match /Products.ResourceRegistries/trunk/
+match /(ResourceRegistries|Products.ResourceRegistries)/trunk/
   repository Products.ResourceRegistries
   branch master
 end match
 
-match /Products.ResourceRegistries/branches/([^/]+)/
+match /(ResourceRegistries|Products.ResourceRegistries)/branches/([^/]+)/
   repository Products.ResourceRegistries
-  branch \1
+  branch \2
 end match
 
-match /Products.ResourceRegistries/tags/([^/]+)/
+match /(ResourceRegistries|Products.ResourceRegistries)/tags/([^/]+)/
   repository Products.ResourceRegistries
-  branch refs/tags/\1
+  branch refs/tags/\2
 end match
 
 match /
