--- a/etc/plone-rules/plone.app.discussion.cfg
+++ b/etc/plone-rules/plone.app.discussion.cfg
@@ -2,6 +2,11 @@
 create repository plone.app.discussion
 end repository
 
+match /plone.app.discussion/(buidouts|buildouts)/
+  repository plone.app.discussion
+  branch master
+end match
+
 match /plone.app.discussion/trunk/
   repository plone.app.discussion
   branch master
