--- a/etc/plone-rules/plone.app.jquerytools.cfg
+++ b/etc/plone-rules/plone.app.jquerytools.cfg
@@ -2,6 +2,11 @@
 create repository plone.app.jquerytools
 end repository
 
+match /plone.app.jqtools/trunk/
+  repository plone.app.jquerytools
+  branch master
+end match
+
 match /plone.app.jquerytools/trunk/
   repository plone.app.jquerytools
   branch master
