--- a/etc/plone-rules/plone.app.kss.cfg
+++ b/etc/plone-rules/plone.app.kss.cfg
@@ -2,6 +2,11 @@
 create repository plone.app.kss
 end repository
 
+match /plone.app.kss/trunx/
+  repository plone.app.kss
+  branch master
+end match
+
 match /plone.app.kss/trunk/
   repository plone.app.kss
   branch master
