--- a/etc/plone-rules/plone.folder.cfg
+++ b/etc/plone-rules/plone.folder.cfg
@@ -2,6 +2,16 @@
 create repository plone.folder
 end repository
 
+match /plone.folder/buildout/
+  repository plone.folder
+  branch master
+end match
+
+match /review/plip191-unified-folders/
+  repository plone.folder
+  branch master
+end match
+
 match /plone.folder/trunk/
   repository plone.folder
   branch master
