--- a/etc/plone-rules/plone.portlets.cfg
+++ b/etc/plone-rules/plone.portlets.cfg
@@ -2,6 +2,13 @@
 create repository plone.portlets
 end repository
 
+match /trunk/
+    repository plone.portlets
+    branch master
+    min revision 10376
+    max revision 10378
+end match
+
 match /plone.portlets/trunk/
   repository plone.portlets
   branch master
