--- a/etc/plone-rules/plone.registry.cfg
+++ b/etc/plone-rules/plone.registry.cfg
@@ -2,6 +2,11 @@
 create repository plone.registry
 end repository
 
+match /plone.registry/elro-records-proxy-collection/
+  repository plone.registry
+  branch elro-records-proxy-collection
+end match
+
 match /plone.registry/trunk/
   repository plone.registry
   branch master
