--- a/etc/plone-rules/plone.app.blob.cfg
+++ b/etc/plone-rules/plone.app.blob.cfg
@@ -2,6 +2,16 @@
 create repository plone.app.blob
 end repository
 
+match /plone.app.blob/buildouts/
+  repository plone.app.blob
+  branch master
+end match
+
+match /ploneout/branches/(zodb3.8-integration|3.0-zodb3.8-integration)/
+  repository plone.app.blob
+  branch master
+end match
+
 match /plone.app.blob/trunk/
   repository plone.app.blob
   branch master
