pointing to wrong svn repos

--- a/etc/plone-projects.cfg
+++ b/etc/plone-projects.cfg
@@ -711,35 +711,35 @@ status = REVIEW-NEEDED
 
 [repo:plonetheme.sunburst]
 rules = %(here)s/plone-rules/plonetheme.sunburst.cfg
-svn-repo = collective
+svn-repo = plone
 svn-path = /plonetheme.sunburst
 git-org = plone
 status = REVIEW-NEEDED
 
 [repo:Products.CMFPlone]
 rules = %(here)s/plone-rules/Products.CMFPlone.cfg
-svn-repo = collective
+svn-repo = plone
 svn-path = /Products.CMFPlone
 git-org = plone
 status = REVIEW-NEEDED
 
 [repo:Products.ExtendedPathIndex]
 rules = %(here)s/plone-rules/Products.ExtendedPathIndex.cfg
-svn-repo = collective
+svn-repo = plone
 svn-path = /Products.ExtendedPathIndex
 git-org = plone
 status = REVIEW-NEEDED
 
 [repo:Products.LinguaPlone]
 rules = %(here)s/plone-rules/Products.LinguaPlone.cfg
-svn-repo = collective
+svn-repo = plone
 svn-path = /Products.LinguaPlone
 git-org = plone
 status = REVIEW-NEEDED
 
 [repo:Products.ResourceRegistries]
 rules = %(here)s/plone-rules/Products.ResourceRegistries.cfg
-svn-repo = collective
+svn-repo = plone
 svn-path = /ResourceRegistries
 git-org = plone
 status = REVIEW-NEEDED
