--- a/etc/plone-rules/Products.CMFPlone.cfg
+++ b/etc/plone-rules/Products.CMFPlone.cfg
@@ -15,7 +15,7 @@ match /CMFPlone/branches/plips/([^/]+)/
 end match
 
 
-match /CMFPlone|Plone3rdParty|Products.CMFPlone)/trunk/
+match /(CMFPlone|Plone3rdParty|Products.CMFPlone)/trunk/
   repository Products.CMFPlone
   branch master
 end match
