some more rules and some more rules

--- a/etc/collective-projects.cfg
+++ b/etc/collective-projects.cfg
@@ -15,6 +15,6 @@ version_regex = ^(plone|v)?[\d._-]+(alpha|beta|branch|rc|RC|final|a|b|c|x)?(\d)*
 rules = %(here)s/collective-rules/collective.contentlicensing.cfg
 svn-repo = collective
 svn-path = /collective.contentlicensing
-git-org = plumi
+git-org = collective
 status = WORKING ON IT (ROK)
 
