--- a/etc/plone-projects.cfg
+++ b/etc/plone-projects.cfg
@@ -270,6 +270,20 @@ svn-path = /Products.TinyMCE
 git-org = plone
 status = REVIEW-NEEDED
 
+[repo:kss.core]
+rules = %(here)s/plone-rules/kss.core.cfg
+svn-repo = collective
+svn-path = /kukit/kss.core
+git-org = plone
+status = REVIEW-NEEDED
+
+[repo:kss.demo]
+rules = %(here)s/plone-rules/kss.demo.cfg
+svn-repo = collective
+svn-path = /kukit/kss.demo
+git-org = plone
+status = REVIEW-NEEDED
+
 [repo:txtfilter]
 rules = %(here)s/plone-rules/txtfilter.cfg
 svn-repo = collective
@@ -744,3 +758,23 @@ svn-path = /ResourceRegistries
 git-org = plone
 status = REVIEW-NEEDED
 
+[repo:Plone]
+rules = %(here)s/plone-rules/Plone.cfg
+svn-repo = plone
+svn-path = /Plone
+git-org = plone
+status = REVIEW-NEEDED
+
+[repo:plone.app.locales]
+rules = %(here)s/plone-rules/plone.app.locales.cfg
+svn-repo = plone
+svn-path = /plone.app.locales
+git-org = plone
+status = REVIEW-NEEDED
+
+[repo:plone.transformchain]
+rules = %(here)s/plone-rules/plone.transformchain.cfg
+svn-repo = plone
+svn-path = /plone.transformchain
+git-org = plone
+status = REVIEW-NEEDED
