--- a/etc/plone-rules/Products.CMFQuickInstallerTool.cfg
+++ b/etc/plone-rules/Products.CMFQuickInstallerTool.cfg
@@ -47,17 +47,17 @@ match /CMFQuickInstallerTool/tags/([^/]+)/
   prefix Products/CMFQuickInstallerTool/
 end match
 
-match /Products.CMFQuickInstallerTool/trunk/
+match /CMFQuickInstallerTool/trunk/
   repository Products.CMFQuickInstallerTool
   branch master
 end match
 
-match /Products.CMFQuickInstallerTool/branches/([^/]+)/
+match /CMFQuickInstallerTool/branches/([^/]+)/
   repository Products.CMFQuickInstallerTool
   branch \1
 end match
 
-match /Products.CMFQuickInstallerTool/tags/([^/]+)/
+match /CMFQuickInstallerTool/tags/([^/]+)/
   repository Products.CMFQuickInstallerTool
   branch refs/tags/\1
 end match
