--- a/etc/plone-rules/Products.ExtendedPathIndex.cfg
+++ b/etc/plone-rules/Products.ExtendedPathIndex.cfg
@@ -3,19 +3,38 @@ create repository Products.ExtendedPathIndex
 end repository
 
 
-match /(ExtendedPathIndex|Products.ExtendedPathIndex)/trunk/
+match /ExtendedPathIndex/trunk/
+  repository Products.ExtendedPathIndex
+  branch master
+  prefix Products/ExtendedPathIndex
+end match
+
+match /ExtendedPathIndex/branches/([^/]+)/
+  repository Products.ExtendedPathIndex
+  branch \1
+  prefix Products/ExtendedPathIndex
+end match
+
+match /ExtendedPathIndex/tags/([^/]+)/
+  repository Products.ExtendedPathIndex
+  branch refs/tags/\1
+  prefix Products/ExtendedPathIndex
+end match
+
+
+match /Products.ExtendedPathIndex/trunk/
   repository Products.ExtendedPathIndex
   branch master
 end match
 
-match /(ExtendedPathIndex|Products.ExtendedPathIndex)/branches/([^/]+)/
+match /Products.ExtendedPathIndex/branches/([^/]+)/
   repository Products.ExtendedPathIndex
-  branch \2
+  branch \1
 end match
 
-match /(ExtendedPathIndex|Products.ExtendedPathIndex)/tags/([^/]+)/
+match /Products.ExtendedPathIndex/tags/([^/]+)/
   repository Products.ExtendedPathIndex
-  branch refs/tags/\2
+  branch refs/tags/\1
 end match
 
 
