--- a/etc/plone-rules/Products.PlacelessTranslationService.cfg
+++ b/etc/plone-rules/Products.PlacelessTranslationService.cfg
@@ -47,17 +47,17 @@ match /PlacelessTranslationService/tags/([^/]+)/
   prefix Products/PlacelessTranslationService/
 end match
 
-match /Products.PlacelessTranslationService/trunk/
+match /PlacelessTranslationService/trunk/
   repository Products.PlacelessTranslationService
   branch master
 end match
 
-match /Products.PlacelessTranslationService/branches/([^/]+)/
+match /PlacelessTranslationService/branches/([^/]+)/
   repository Products.PlacelessTranslationService
   branch \1
 end match
 
-match /Products.PlacelessTranslationService/tags/([^/]+)/
+match /PlacelessTranslationService/tags/([^/]+)/
   repository Products.PlacelessTranslationService
   branch refs/tags/\1
 end match
