--- a/etc/plone-rules/borg.localrole.cfg
+++ b/etc/plone-rules/borg.localrole.cfg
@@ -2,17 +2,17 @@
 create repository borg.localrole
 end repository
 
-match /borg.localrole/trunk/
+match /borg/components/borg.localrole/trunk/
   repository borg.localrole
   branch master
 end match
 
-match /borg.localrole/branches/([^/]+)/
+match /borg/components/borg.localrole/branches/([^/]+)/
   repository borg.localrole
   branch \1
 end match
 
-match /borg.localrole/tags/([^/]+)/
+match /borg/components/borg.localrole/tags/([^/]+)/
   repository borg.localrole
   branch refs/tags/\1
 end match
