--- a/etc/plone-rules/plone.app.content.cfg
+++ b/etc/plone-rules/plone.app.content.cfg
@@ -2,7 +2,13 @@
 create repository plone.app.content
 end repository
 
-match /plone.app.content/trunk/
+#match /plone.app.views/trunk/plone/app/views/
+#  repository plone.app.content
+#  branch master
+#  prefix plone/app/content/
+#end match
+
+match /plone.app.(content|views)/trunk/
   repository plone.app.content
   branch master
 end match
