--- a/etc/plone-rules/plone.app.form.cfg
+++ b/etc/plone-rules/plone.app.form.cfg
@@ -2,7 +2,7 @@
 create repository plone.app.form
 end repository
 
-match /plone.app.form/trunk/
+match /plone.(form|app.form)/trunk/
   repository plone.app.form
   branch master
 end match
