--- a/etc/plone-rules/plone.protect.cfg
+++ b/etc/plone-rules/plone.protect.cfg
@@ -2,6 +2,21 @@
 create repository plone.protect
 end repository
 
+match /plone.app.protect/trunk/
+  repository plone.protect
+  branch master
+end match
+    
+match /plone.app.protect/branches/([^/]+)/
+  repository plone.protect
+  branch \1
+end match
+
+match /plone.app.protect/tags/([^/]+)/
+  repository plone.protect
+  branch refs/tags/\1
+end match
+
 match /plone.protect/trunk/
   repository plone.protect
   branch master
