deco related projects

--- a/etc/deco-projects.cfg
+++ b/etc/deco-projects.cfg
@@ -12,113 +12,113 @@ version_regex = ^(plone|v)?[\d._-]+(alpha|beta|branch|rc|RC|final|a|b|c|x)?(\d)*
 
 
 [repo:plone.app.tinymce]
-rules = %(rules)s/deco-rules/plone.app.tinymce.cfg
+rules = %(here)s/deco-rules/plone.app.tinymce.cfg
 svn-repo = plone
 svn-path = /plone.app.tinymce
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.formwidget.multifile]
-rules = %(rules)s/deco-rules/plone.formwidget.multifile.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.formwidget.multifile.cfg
+svn-repo = plone
 svn-path = /plone.formwidget.multifile
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.formwidget.querystring]
-rules = %(rules)s/deco-rules/plone.formwidget.querystring.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.formwidget.querystring.cfg
+svn-repo = plone
 svn-path = /plone.formwidget.querystring
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.app.deco]
-rules = %(rules)s/deco-rules/plone.app.deco.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.app.deco.cfg
+svn-repo = plone
 svn-path = /plone.app.deco
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.app.drafts]
-rules = %(rules)s/deco-rules/plone.app.drafts.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.app.drafts.cfg
+svn-repo = plone
 svn-path = /plone.app.drafts
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.tiles]
-rules = %(rules)s/deco-rules/plone.tiles.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.tiles.cfg
+svn-repo = plone
 svn-path = /plone.tiles
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.directives.tiles]
-rules = %(rules)s/deco-rules/plone.directives.tiles.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.directives.tiles.cfg
+svn-repo = plone
 svn-path = /plone.directives.tiles
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.app.tiles]
-rules = %(rules)s/deco-rules/plone.app.tiles.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.app.tiles.cfg
+svn-repo = plone
 svn-path = /plone.app.tiles
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.app.standardtiles]
-rules = %(rules)s/deco-rules/plone.app.standardtiles.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.app.standardtiles.cfg
+svn-repo = plone
 svn-path = /plone.app.standardtiles
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.app.page]
-rules = %(rules)s/deco-rules/plone.app.page.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.app.page.cfg
+svn-repo = plone
 svn-path = /plone.app.page
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.app.blocks]
-rules = %(rules)s/deco-rules/plone.app.blocks.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.app.blocks.cfg
+svn-repo = plone
 svn-path = /plone.app.blocks
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.app.querystring]
-rules = %(rules)s/deco-rules/plone.app.querystring.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.app.querystring.cfg
+svn-repo = plone
 svn-path = /plone.app.querystring
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.app.search]
-rules = %(rules)s/deco-rules/plone.app.search.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.app.search.cfg
+svn-repo = plone
 svn-path = /plone.app.search
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.resource]
-rules = %(rules)s/deco-rules/plone.resource.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.resource.cfg
+svn-repo = plone
 svn-path = /plone.resource
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:plone.subrequest]
-rules = %(rules)s/deco-rules/plone.subrequest.cfg
-svn-path = plone
+rules = %(here)s/deco-rules/plone.subrequest.cfg
+svn-repo = plone
 svn-path = /plone.subrequest
 git-org = plone
-status = NEED RULES
+status = OK
 
 [repo:Products.ResourceRegistries]
-rules = %(rules)s/deco-rules/Products.ResourceRegistries.cfg
-svn-path = plone
-svn-path = /Products.ResourceRegistries
+rules = %(here)s/deco-rules/Products.ResourceRegistries.cfg
+svn-repo = plone
+svn-path = /ResourceRegistries
 git-org = plone
-status = NEED RULES
+status = OK
