deco related apckages migrated

--- a/etc/deco-projects.cfg
+++ b/etc/deco-projects.cfg
@@ -2,6 +2,7 @@
 authors-file = %(here)s/authors.cfg
 svn-repos =
     plone http://svn.plone.org/svn/plone
+    collective http://svn.plone.org/svn/collective
 
 svn-all-fast-export-tool = %(here)s/../src/svn2git/svn-all-fast-export
 svn-mirror-location = %(here)s/../var/repos/svn-mirror
@@ -10,6 +11,41 @@ git-cleaned-location = %(here)s/../var/repos/git-cleaned
 analyze-location = %(here)s/../var/repos/analyze
 version_regex = ^(plone|v)?[\d._-]+(alpha|beta|branch|rc|RC|final|a|b|c|x)?(\d)*$
 
+
+[repo:buildout.deco]
+rules = %(here)s/deco-rules/buildout.deco.cfg
+svn-repo = plone
+svn-path = /plone.app.deco/buildouts/dev
+git-org = plone
+status = OK
+
+[repo:five.intid]
+rules = %(here)s/deco-rules/five.intid.cfg
+svn-repo = collective
+svn-path = /five.intid
+git-org = plone
+status = OK
+
+[repo:decobrewery.contenttypes]
+rules = %(here)s/deco-rules/decobrewery.contenttypes.cfg
+svn-repo = collective
+svn-path = /decobrewery.contenttypes
+git-org = plone
+status = OK
+
+[repo:decobrewery.policy]
+rules = %(here)s/deco-rules/decobrewery.policy.cfg
+svn-repo = collective
+svn-path = /decobrewery.policy
+git-org = plone
+status = OK
+
+[repo:decobrewery.theme]
+rules = %(here)s/deco-rules/decobrewery.theme.cfg
+svn-repo = collective
+svn-path = /decobrewery.theme
+git-org = plone
+status = OK
 
 [repo:plone.app.tinymce]
 rules = %(here)s/deco-rules/plone.app.tinymce.cfg
