adding dexterity rules

--- a/etc/plone-projects.cfg
+++ b/etc/plone-projects.cfg
@@ -21,8 +21,7 @@ rules = %(here)s/plone-rules/archetypes.kss.cfg
 svn-repo = archetypes
 svn-path = /archetypes.kss
 git-org = plone
-status = WORKS-FOR-ME (garbas)
-    tag 1.2 and branch 1.2 are missing some content and show same things are missing
+status = OK
 
 [repo:archetypes.referencebrowserwidget]
 rules = %(here)s/plone-rules/archetypes.referencebrowserwidget.cfg
